 * Added a new event, OBJECT`FLAG, triggered when a flag/power with the
   "event" restriction is set or cleared. Suggested by [SW]. [MG]
 * Expanded help on lock types and @powers. [MG]

Fixes:
 * lit() didn't properly handle '\'s. Reported by Wiggles. [MG]
 * listq() incorrectly returned all registers (including %0-%9, %i0, etc),
   not just %q-registers. Reported by Wiggles. [MG]

Version 1.8.4 patchlevel 8                                 Nov 11, 2011

Major changes:
 * ssl_slave is enabled by default by configure if OpenSSL and
  libevent2 are present. Passing --disable-ssl_slave to configure will
  still disable it. [SW]
 * The newline_one_char config option has been removed -- %r now
   always returns a single-char newline (\n). [MG]
 * Microsoft Visual Studio 2010 project files contributed by Daniko.

Minor changes:
 * crunch_code and crypt_code in funcrypt.c are no longer
   static. Requested by qa'toq@M*U*S*H. [MG]
 * @dump now notifies the executor when the dump is
   complete. Suggested by Padraic. [MG]
 * There is now a slight delay between a client connecting to the
   MUSH, and the connect screen being shown. This means that the "<--
   ... -->" HTML comments are no longer needed around the connect
   screen when mud_url is enabled, the HTML shown when someone
   connects to the MUSH with a browser works better, and that Pueblo
   clients will usually only get the HTML connect screen, instead of
   seeing both. Also, telnet negotiation should complete before the
   screen is shown, making terminfo() and width() give useful values
   for people using softcoded connect_files. Commands can still be
   used before the connect screen is displayed. [MG]
 * When looking at an object, all its components (describe,
   descformat, conformat and exitformat) now share registers: a
   q-register set in the desc can be accessed in the conformat, and so
   on. [MG]
 * When you fail to @mail a player because you don't pass their